# api_getway/api/handlers/models/admin.go
@@ -1,5 +1,10 @@
 package models
 
+type LoginReq struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
+
 type AdminRequest struct {
 	Name     string `json:"name"`
 	Email    string `json:"email"`
